# opentelemetry-ebpf

./: README-write-metrics-code-path.org  README-write-metrics-code-path.txt  cgroup.cc  cgroup_apply_control_disable.bt  probes.cc
channel/: test_channel.cc
dev/: README.jmw  benv  benv-alias.sh  nproc.sh  peek-image-tag.sh  pods-list.sh  s3_bucket_details.sh  style-format.sh  upload-build-env.sh
otlp/: otlp_grpc_client.h
test/python/: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  run-main.sh  run-mocked-pipeline-server.sh  run-test-container.sh
test/python/flowmill/: CMakeLists.txt  core.py  docker.py  object.py
test/python/flowmill/collector/: kernel.py  tester.py
test/python/flowmill/kernel_collector_simulator/: kernel_collector_simulator.py
test/python/flowmill/otlp_to_prom/: otlp_to_prom.py
test/python/flowmill/reducer/: reducer.py  tester.py
test/python/flowmill/render/: message.py  metric.py  span.py  stream.py
test/python/flowmill/render/app/: ingest.py
test/python/flowmill/render/spans/: tracked_process.py
test/python/flowmill/render/test/: stream_test.py
test/python/tests/: README.md  auth.py  cpu.py  http-code.py  kernel-headers.py  otlp.py  sandbox.py
test/workload/: CMakeLists.txt
test/workload/http-code/: CMakeLists.txt  Dockerfile  entrypoint.sh
test/workload/lookbusy/: CMakeLists.txt  Dockerfile
test/workload/random-sha1/: CMakeLists.txt  Dockerfile  entrypoint.sh
test/workload/sockets/: CMakeLists.txt  Dockerfile  sockets.py
tools/experiments/otlp-poc/grpc/: CMakeLists.txt  otlp-grpc-logs-client-test.cc
(+121 files in other folders)
